#11: Fixing expressions precedences